missing last js function and mobile css

--- a/index.html
+++ b/index.html
@@ -29,39 +29,29 @@
 
 
 <div class="img-container .col-6"> 
-  <div class="photo"></div>
+  <div id="photo" class="photo"></div>
 
 
   <div  class="icon-container" > 
-      <button id="btnPrev" class="btn btnPrev" onclick="changeBtnColor"><img src="images/keyboard_arrow_left-24px.svg"></button>
-      <button id="btnNext" class="btn btnNext"><img src="images/keyboard_arrow_right-24px.svg"></button>
+      <button id="btnPrev" class="btn btnPrev" onclick="sliderUser1"><img src="images/keyboard_arrow_left-24px.svg"></button>
+      <button id="btnNext" class="btn btnNext" onclick="sliderUser2"><img src="images/keyboard_arrow_right-24px.svg"></button>
   </div>
 </div>
 
 
 <div class="testimony-container">
-  <p class="testimony-tanya">
-  “ I’ve been interested in coding for a while<br> 
-  but never taken the jump, until now. I<br> 
-  couldn’t recommend this course enough. <br>
-  I’m now in the job of my dreams and so <br>
-  excited about the future. ”
+  <p id="testimony" class="testimony">
+  
   </p>
-  <p class="signature-tanya"><a>Tanya Sinclair</a>UX Engineer</p>
-
+  <div style="display:flex">
+  <p id="name" class="name"></p>&nbsp &nbsp<a class="role" id="role"></a>
+  </div>
 <div>
-<!--
-  “ If you want to lay the best foundation possible I’d recommend taking this course. 
-  The depth the instructors go into is incredible. I now feel so confident about 
-  starting up as a professional developer. ”
 
-  John Tarkpor
-  Junior Front-end Developer
--->  
 <!--
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Joel Rocha</a>.
 -->
   </div>
 
