--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
   <!--images layout-->
 <div class="row">
-<img class="pattern-curve .col-6" src="images/pattern-curve.svg"/>
-<img class="pattern-quotes .col-3" src="images/pattern-quotes.svg">
+<img class="pattern-curve .col-6" src="images/pattern-curve.svg" alt="curve-pattern"/>
+<img class="pattern-quotes .col-3" src="images/pattern-quotes.svg" alt="text-decoration"/>
 </div>
 
 
@@ -33,8 +33,8 @@
 
 
   <div  class="icon-container" > 
-      <button id="btnPrev" class="btn btnPrev" onclick="sliderUser1"><img src="images/keyboard_arrow_left-24px.svg"></button>
-      <button id="btnNext" class="btn btnNext" onclick="sliderUser2"><img src="images/keyboard_arrow_right-24px.svg"></button>
+      <button id="btnPrev" class="btn btnPrev" onclick="sliderUser1"><img src="images/keyboard_arrow_left-24px.svg" alt="arrow-previous"></button>
+      <button id="btnNext" class="btn btnNext" onclick="sliderUser2"><img src="images/keyboard_arrow_right-24px.svg" alt="arrow-next"></button>
   </div>
 </div>
 
@@ -43,8 +43,8 @@
   <p id="testimony" class="testimony">
   
   </p>
-  <div style="display:flex">
-  <p id="name" class="name"></p>&nbsp &nbsp<a class="role" id="role"></a>
+  <div class="signature">
+  <p id="name" class="name"></p><a class="role" id="role"></a>
   </div>
 <div>
 
